Optimize FXPaintFactory